--- a/libtorrent.cabal
+++ b/libtorrent.cabal
@@ -106,7 +106,7 @@ library
                      , random
   default-language:    Haskell2010
   extra-libraries: stdc++
-  pkgconfig-depends: libtorrent-rasterbar
+  pkgconfig-depends: libtorrent-rasterbar >= 1.0.9
   include-dirs: include
   cc-options: -Wall -O2 -std=c++11
   ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
@@ -199,7 +199,7 @@ test-suite libtorrent-test
                      , async
   ghc-options:      -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
   cc-options: -Wall -O2 -std=c++11
-  pkgconfig-depends: libtorrent-rasterbar
+  pkgconfig-depends: libtorrent-rasterbar >= 1.0.9
   default-language:    Haskell2010
 
 source-repository head
